# jsolver

./: .gitignore  CMakeLists.txt  build.sh  run.sh
src/: jcard.cpp  jcard.h  jrank.cpp  jrank.h  jsolver.cpp  jsolver.h  main.cpp  putil.cpp  putil.h
